
2017-07-29  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (system_name_table): added switches USW-0 thru USW-31.
	* field.c (validate_field_1): added warning for useless FULL clause on
	  numeric items.

2017-07-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: fixed bug #402 - optional WITH clause functional
	* parser.y, reserved.c: FR #78 more phrases for DISPLAY WINDOW
	* parser.y, typeck.c: FR #77 fixed HANDLE references
	* parser.y, reserved.c: FR #190 minimal support for DISPLAY MESSAGE BOX
	* parser.y, typeck.c: fixed SIGSEGV in cobc for DISPLAY OMITTED

2017-07-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c: added clauses COLOR and SIZE as PENDING
	* parser.y: added ACCEPT FROM SCREEN as PENDING

2017-07-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: fixed memory overlap for long strings in listing title
	* cobc.c [_MSC_VER](process_filtered): fixed cobc_free of NULL pointer

2017-07-19  Ron Norman <rjn@inglenet.com>

	* typeck.c, parser.y, tree.h, tree.c:
	  Limit ignoring errors to IF, WHEN and PERFORM UNTIL
	  when the condition is resolved at compile time
	* tree.c: When comparing a display numeric field to a literal
	  and the literal is longer than the field, the result
	  can be determined at compile time as TRUE or FALSE

2017-07-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, tree.c: check both increased MAX_FD_RECORD and the new
	  introduced MAX_FD_RECORD_IDX depending on file organization
	* config.c: for -fnot-reserved=word: additional to removing "word"
	  from reserved word list remove "word" from register, system-names
	  and intrinsic function list

2017-07-17  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (cb_expr_shift): corrected r1347 - only set expr_lh to NULL
	  if the token in parentheses is a relational expression (see bug #321).

2017-07-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
